# compound-poisson-gamma.numpyro

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yaml
compound_poisson_gamma/: __init__.py  dist.py  util.py
compound_poisson_gamma/tests/: test_dist.py  test_imports.py  test_util.py
