[build-system]
requires = ["setuptools==78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "compound-poisson-gamma"
version = "0.1"
authors = [
  {name = "W. G. S. Vinning"}
]
dynamic = ["readme"]
dependencies = [
  "jax",
  "jaxlib",
  "numpyro",
  "typing-extensions; python_version < '3.11'"
]

[project.optional-dependencies]
test = ["pytest==8.3.*"]
dev = ["compound-poisson-gamma[test]", "pre-commit==4.2.*"]

[tool.setuptools.dynamic]
readme = {file = "README.md"}

[tool.setuptools.packages.find]
exclude = []

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
ignore = ["D", "COM812", "S101"]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]

[tool.mypy]
pretty = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "numpyro.*"
]

[tool.interrogate]
ignore-overloaded-functions = true
fail-under = 90
exclude = ["setup.py", "docs", "build", "compound-poisson-gamma/tests"]
verbose = 2
color = true
generate-badge = ".github/interrogate-badge.svg"
badge-format = "svg"
badge-style = "flat"

[tool.coverage.report]
exclude_lines = [
  "pragma: not covered",
  "@overload",
  "class .*\\bProtocol\\):"
]
